<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/basic_indentation">

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/img_desc_company_logo"
        android:src="@drawable/ic_optimal_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login_login"
        style="@style/text_secondary"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:background="@color/backgroundSecondary"
        android:hint="@string/login_login_hint"
        android:inputType="text"
        android:padding="@dimen/half_indentation"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/login_image" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login_password"
        style="@style/text_secondary"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/basic_indentation"
        android:background="@color/backgroundSecondary"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:padding="@dimen/half_indentation"
        android:textColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/login_login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        style="@style/button_primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/basic_indentation"
        android:text="@string/login_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password" />

    <ProgressBar
        android:id="@+id/login_loading"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>