<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profile_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img_desc_background_image"
        android:src="@drawable/img_profile_background"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9000"
        app:layout_constraintBottom_toTopOf="@+id/profile_avatar"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profile_level_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icon_desc_level_icon"
            android:src="@drawable/ic_level"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_level"
            style="@style/subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/profile_level_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/profile_xp_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/double_indentation"
            android:contentDescription="@string/icon_desc_xp_icon"
            android:src="@drawable/ic_xp"
            app:layout_constraintEnd_toStartOf="@+id/profile_level_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_xp"
            style="@style/subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/profile_xp_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/profile_money_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/double_indentation"
            android:contentDescription="@string/icon_desc_money_icon"
            android:src="@drawable/ic_money"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profile_level_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_money"
            style="@style/subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/profile_money_icon"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/profile_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img_desc_profile_avatar"
        android:src="@drawable/img_profile_avatar"
        app:layout_constraintBottom_toBottomOf="@id/profile_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/profile_login"
        style="@style/headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/basic_indentation"
        app:layout_constraintBottom_toBottomOf="@id/profile_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/basic_indentation">

            <ProgressBar
                android:id="@+id/profile_progressbar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/half_indentation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RelativeLayout
                android:id="@+id/profile_contacts_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/double_indentation"
                android:paddingEnd="@dimen/double_indentation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_progressbar">

                <ImageView
                    android:id="@+id/profile_contacts_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/icon_desc_contacts_icon"
                    android:paddingBottom="@dimen/basic_indentation"
                    android:src="@drawable/ic_contacts" />

                <TextView
                    android:id="@+id/profile_contacts_desc"
                    style="@style/text_secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profile_contacts_icon"
                    android:gravity="center" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/profile_addressing_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/double_indentation"
                android:paddingEnd="@dimen/double_indentation"
                app:layout_constraintEnd_toStartOf="@+id/profile_contacts_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_progressbar">

                <ImageView
                    android:id="@+id/profile_addressing_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/icon_desc_addressing_icon"
                    android:paddingBottom="@dimen/basic_indentation"
                    android:src="@drawable/ic_addressing" />

                <TextView
                    android:id="@+id/profile_addressing_desc"
                    style="@style/text_secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profile_addressing_icon"
                    android:gravity="center" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/profile_analysis_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/double_indentation"
                android:paddingEnd="@dimen/double_indentation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/profile_contacts_layout"
                app:layout_constraintTop_toBottomOf="@+id/profile_progressbar">

                <ImageView
                    android:id="@+id/profile_analysis_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/icon_desc_analysis_icon"
                    android:paddingBottom="@dimen/basic_indentation"
                    android:src="@drawable/ic_analysis" />

                <TextView
                    android:id="@+id/profile_analysis_desc"
                    style="@style/text_secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profile_analysis_icon"
                    android:gravity="center" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/profile_consulting_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/double_indentation"
                android:paddingEnd="@dimen/double_indentation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/profile_services_layout"
                app:layout_constraintTop_toBottomOf="@+id/profile_contacts_layout">

                <ImageView
                    android:id="@+id/profile_consulting_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/icon_desc_consulting_icon"
                    android:paddingBottom="@dimen/basic_indentation"
                    android:src="@drawable/ic_consulting" />

                <TextView
                    android:id="@+id/profile_consulting_desc"
                    style="@style/text_secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profile_consulting_icon"
                    android:gravity="center" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/profile_services_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/double_indentation"
                android:paddingEnd="@dimen/double_indentation"
                app:layout_constraintEnd_toStartOf="@+id/profile_consulting_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_contacts_layout">

                <ImageView
                    android:id="@+id/profile_services_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/icon_desc_service_icon"
                    android:paddingBottom="@dimen/basic_indentation"
                    android:src="@drawable/ic_services" />

                <TextView
                    android:id="@+id/profile_services_desc"
                    style="@style/text_secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/profile_services_icon"
                    android:gravity="center" />
            </RelativeLayout>

            <TextView
                android:id="@+id/profile_skills_headline"
                style="@style/headline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="@dimen/basic_indentation"
                android:text="@string/skills"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_services_layout" />

            <FrameLayout
                android:id="@+id/profile_fragment_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/basic_indentation"
                app:layout_constraintTop_toBottomOf="@+id/profile_skills_headline">

                <include layout="@layout/content_skills_list" />
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

