<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.dashboard.questdetail.QuestDetailActivity"
    tools:showIn="@layout/activity_quest_detail">

    <TextView
        android:id="@+id/detail_quest_title"
        style="@style/headline4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_quest_desc"
        style="@style/text_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_indentation"
        app:layout_constraintTop_toBottomOf="@id/detail_quest_title" />

    <TextView
        android:id="@+id/detail_quest_skills_sub"
        style="@style/headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/basic_indentation"
        android:text="@string/skills"
        app:layout_constraintTop_toBottomOf="@id/detail_quest_desc" />

    <TextView
        android:id="@+id/xp_title"
        style="@style/subtitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/half_indentation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_quest_skills_sub" />

    <ImageView
        android:id="@+id/xp_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icon_desc_xp_icon"
        android:src="@drawable/ic_xp"
        app:layout_constraintStart_toEndOf="@+id/xp_title"
        app:layout_constraintTop_toBottomOf="@+id/detail_quest_skills_sub" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/quest_detail_skills_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/detail_quest_notes_sub"
        app:layout_constraintTop_toBottomOf="@+id/xp_icon" />

    <TextView
        android:id="@+id/detail_quest_notes_sub"
        style="@style/headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/basic_indentation"
        android:text="@string/notes"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/quest_detail_skills_recyclerview" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/detail_quest_notes"
        style="@style/text_secondary"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/backgroundSecondary"
        android:gravity="top|start"
        android:padding="@dimen/basic_indentation"
        android:textColor="@color/colorPrimary"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/detail_quest_notes_sub" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/detail_quest_button"
        style="@style/button_primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/basic_indentation"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detail_quest_notes" />
</androidx.constraintlayout.widget.ConstraintLayout>